syntax = "proto3";
package proto;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/vivekab/golib/protobuf/protoroot";

enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;
  ERROR_CODE_INDEX_NOT_PRESENT_ON_FIELD = 1;
  ERROR_CODE_API_ERROR_RETRY = 2;
  ERROR_CODE_INVALID_TOKEN = 3;
  ERROR_CODE_DB_QUERY_TIMEOUT = 4;
  ERROR_CODE_DB_CAPACITY_EXCEEDED = 5;
  ERROR_CODE_DB_SESSION_EXPIRED = 6;
  ERROR_CODE_DB_SESSION_LIMIT_EXCEEDED = 7;
  ERROR_CODE_DB_RATE_LIMIT_EXCEEDED = 8;
  ERROR_CODE_GENERATE_ACCOUNT_NUMBER = 14;
  ERROR_CODE_APIKEY_ID_ERROR = 9;
  ERROR_CODE_APIKEY_ID_RETRY_EXCEEDED = 10;
  ERROR_CODE_AUTH_ERROR = 12;
  ERROR_CODE_INVALID_SHOW_TOKEN = 13;
  ERROR_CODE_INTERNAL_ERROR = 16;
  ERROR_CODE_PROTO_VALIDATION_FAILED = 15;
  ERROR_CODE_UNAUTHORIZED = 17;
  ERROR_CODE_REDIS_ERROR = 18;

  //DB Errors
  ERROR_CODE_DB_ERROR = 21;
  ERROR_CODE_DB_TYPE_ERROR = 22;
  ERROR_CODE_DB_VERSION_MISMATCH = 23; // error generated when update is triggered but version is incorrect

  ERROR_CODE_AUTH_FORBIDDEN = 100;
  ERROR_CODE_AUTH_EXPIRED = 101;

  ERROR_CODE_INVALID_FIELD = 400;
  ERROR_CODE_RESOURCE_ALREADY_EXIST = 401;
  ERROR_CODE_RESOURCE_NOT_FOUND = 402;
  ERROR_CODE_RESOURCE_ERROR = 404;
  ERROR_CODE_INVALID_REQUEST_BODY = 405;
  ERROR_CODE_RESOURCE_UPDATE_NOT_ALLOWED = 406;
  ERROR_CODE_INVALID_STATUS = 407;
}

message GrpcError {
    ErrorCode code = 1;
    string message = 2;
    string field_name = 3;
    string sys_message = 4;
    int32 http_code = 5;
  }
  
  message Error {
    string code = 1;
    string message = 2;
    string field_name = 3;
  }
  
  message HTTPError {
    string request_id = 1;
    string client_id = 2;
    string method = 3;
    int32 status = 4;
    Error error = 5;
    google.protobuf.Timestamp created_at = 22;
  }
  
  message SysMessage {
    string message = 1;
  }

  message RequestId {
    string request_id = 1;
  }